--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "build:dev": "webpack --env development",
+    "build:prod": "webpack --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run buld:prod"
   },
   "author": "Olesia Kazanivska",
   "license": "MIT",
@@ -31,12 +35,14 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "mini-css-extract-plugin": "^2.6.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "description": "",
   "dependencies": {
     "css-loader": "^6.7.1",
+    "express": "^4.18.2",
     "jest": "^29.2.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
