--- a/package.json
+++ b/package.json
@@ -33,21 +33,20 @@
     }
   },
   "devDependencies": {
+
+  },
+  "description": "",
+  "dependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
-    "mini-css-extract-plugin": "^2.6.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "description": "",
-  "dependencies": {
-    "css-loader": "^6.7.1",
     "express": "^4.18.2",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "jest": "^29.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "normalize.css": "^8.0.1",
@@ -64,6 +63,8 @@
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   }
 }
