--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "npm": "8.1.2",
   "name": "expensify",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.13.1",
+    "npm": "8.1.2"
   },
   "main": "index.js",
   "scripts": {
