--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
       ]
     }
   },
-  "devDependencies": {
-
-  },
   "description": "",
   "dependencies": {
     "@babel/cli": "^7.19.3",
@@ -42,10 +39,10 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
-    "express": "^4.18.2",
     "babel-loader": "^8.2.5",
+    "chalk": "^5.1.2",
     "css-loader": "^6.7.1",
-    "jest": "^29.2.0",
+    "express": "^4.18.2",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
@@ -57,14 +54,17 @@
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "jest": "^29.2.0",
+    "react-test-renderer": "^18.2.0",
     "webpack-dev-server": "^4.11.1"
   }
 }
