--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dates": "^21.8.0",
