fear: setup test database env

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:dev": "webpack --env development",
     "build:prod": "webpack --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -42,7 +42,9 @@
     "babel-loader": "^8.2.5",
     "chalk": "^5.1.2",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.13.0",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
@@ -56,6 +58,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "redux": "^4.2.0",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0",
@@ -64,6 +68,7 @@
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.2.0",
     "react-test-renderer": "^18.2.0",
     "webpack-dev-server": "^4.11.1"
