--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.13.0",
+    "history": "^5.3.0",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
